Final Commit! Lots of changes

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,9 @@
 <head>
-    <title>NFL Season</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-<h3> NFL Season </h3>
-<ol>
-    <% @teams.each do |team|   %>
-      <li><p><a href=<%="#{team[:teams]}"%>></a></p></li>
-</ol>
-</br>
-<h3> Link to Leaderboard </h3>
-
+  <title>NFL Season</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<h3> *** Please Navigate to /leaderboard *** </h3>
+<h4> *** Page Incomplete *** </h4>
 
 
 
